log
Thu 05 Oct 2023 02:52:58 PM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  0|5
total_score: 0/70
0a250c7
Thu 05 Oct 2023 02:55:50 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
ad1ec67
Thu 05 Oct 2023 02:56:19 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ee06215
Thu 05 Oct 2023 03:01:42 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f8cc65f
Thu 05 Oct 2023 03:03:44 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
f5ef80c
Thu 05 Oct 2023 03:04:28 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3d2504d
Thu 05 Oct 2023 03:05:13 PM UTC: 
 sudoku.c | 22 +++++-----------------
 1 file changed, 5 insertions(+), 17 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
17202ab
Thu 05 Oct 2023 03:06:00 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
ffd92db
Thu 05 Oct 2023 03:08:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f4f541c
Thu 05 Oct 2023 03:08:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
50cb933
